[project]
name = "moe-training"
version = "0.1.0"
description = "MoE model training codebase built on TorchTitan parallelism"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.8.4",
    "logfire>=4.32.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=14.3.3",
    "ruff>=0.15.10",
    "safetensors>=0.7.0",
    "tokenizers>=0.22.2",
    "torch>=2.11.0",
    "torchdata>=0.11.0",
    "typer>=0.24.1",
    "wandb>=0.25.1",
]
